EWM: fix code review in Comparison